# intel-brief

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  SETUP.md  brief_output.html  build_brief.py  build_brief_vml.py  execute.html  index.html  package-lock.json  package.json  pipeline-config.yaml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.sh
.github/workflows/: agent-brief.yml  daily-brief.yml  deploy.yml  render-on-demand.yml  validate.yml
briefs/: CSE_Intel_Brief_20260304.docx  CSE_Intel_Brief_20260305.doc  CSE_Intel_Brief_20260307_024919.json  CSE_Intel_Brief_20260308_224500.docx  CSE_Intel_Brief_20260308_224500.html  CSE_Intel_Brief_20260309_011700.html  CSE_Intel_Brief_20260310_103000.html  CSE_Intel_Brief_20260310_103000.json  brief_20260306.html
cycles/: .gitignore  cycle001_20260304.json  cycle002_20260304.json  cycle002_20260308.json  cycle003_20260309.json  cycle004_20260310.json  cycle005_20260306.json  cycle006_20260306.json  cycle007_20260306.json  cycle008_20260308.json  cycle008_20260314.json  cycle009_20260308.json  cycle011_20260317.json  cycle012_20260318.json  cycle013_20260319.json  cycle014_20260320.json  cycle017_20260323.json  cycle018_20260324.json  cycle019_20260325.json  cycle023_20260329.json  cycle025_20260331.json  cycle026_20260401.json  cycle028_20260403.json  cycle031_20260406.json  cycle032_20260407.json  cycle033_20260408.json  cycle034_20260409.json  cycle036_20260411.json  cycle038_20260413.json  cycle041_20260416.json  cycle042_20260417.json  cycle045_20260420.json  cycle049_20260424.json  cycle052_20260427.json  cycle053_20260428.json  cycle054_20260429.json  cycle055_20260430.json  cycle056_20260501.json  latest.json
pipeline/: QA_PLAN.md  agent_brief.py  main.py  utils.py
pipeline/draft/: drafter.py  quality_checks.py
pipeline/ingest/: demo_seed.py  email_ingest.py  http_util.py  manual_ingest.py  relevance.py  rss_ingest.py  scraper.py  sources.yaml  war_risk_ingest.py
pipeline/output/: serializer.py
pipeline/render/: html_renderer.py  print.css
pipeline/review/: CLI_OVERHAUL_PROMPT.md  review_cli.py
pipeline/triage/: classifier.py  confidence.py  novelty.py  war_risk_significance.py
scratch/: error.md
scripts/: auto_cycle.sh  export_brief.py  parse_raw_sources.py  sync_briefs.py
src/: App.tsx  main.tsx
src/components/: ActorMatrix.tsx  AnalystNote.tsx  BodyContent.tsx  BriefFooter.tsx  Caveats.tsx  CollectionGaps.tsx  DataTable.tsx  DissenterNote.tsx  DomainSection.tsx  ExecutiveAssessment.tsx  FlashPoints.tsx  KeyJudgmentBox.tsx  KpiStrip.tsx  Masthead.tsx  StrategicHeader.tsx  Timeline.tsx  WarningIndicators.tsx
src/data/: CSE_Intel_Brief_20260306.json  CSE_Intel_Brief_20260307.json  CSE_Intel_Brief_20260307_024919.json  cycle001.json  (+42 more)
tests/: test_classifier.py  test_confidence.py  test_novelty.py  test_serializer.py  test_utils.py
(+160 files in other folders)
